Remove extra padding from issues details
I think the padding is making this harder to read, rather than easier.

--- a/common-theme/assets/styles/04-components/issue.scss
+++ b/common-theme/assets/styles/04-components/issue.scss
@@ -1,7 +1,4 @@
 .c-issue {
-  ~ .c-issue:not(.c-issue--pr) {
-    padding-top: var(--theme-spacing--6);
-  }
   &__title {
     font-weight: 300;
     margin-bottom: var(--theme-spacing--1);
